test/fail/generated/test_operator_pow/test_data_set_0/input_1.pb
J`Ìu¿ BÑ¾ØÆ‰?ž—Í¾æ¨:¿®Šù½†õ¾kA¿xŸ¾Ì¢R>ã9w?iª4?C :?ƒ†£?šoŠ¿0À¦¿•Š?f+±¿Z‚Î>•¨œ¿Ó¥3?ü°@Zâ¼ë†?